refactor: Add utility class for displaying web content with limited lines

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,12 @@ body {
 .custom-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+@layer utilities {
+  .display-web {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+}
